--- a/Parcial_2.ipynb
+++ b/Parcial_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRO7PP3Th7ADT3JnhApYc8",
+      "authorship_tag": "ABX9TyPv9hRC399/fYJCb8aujhhu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,9 +62,9 @@
           "height": 174
         },
         "id": "izMGwd6hd-IL",
-        "outputId": "0814ebb8-633f-46b9-f592-0b5ed865c736"
+        "outputId": "21b27b01-1078-4363-8465-e11fe62b011f"
       },
-      "execution_count": 23,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,11 +73,11 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=18hLnsW5nwOM4PDpHfGNefB5-y7oLdi_s\n",
             "To: /content/punto0.png\n",
-            "100%|██████████| 21.9k/21.9k [00:00<00:00, 23.4MB/s]\n",
+            "100%|██████████| 21.9k/21.9k [00:00<00:00, 14.8MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1yFvF9wO81piylZmNcztEYAWO7yilrl9n\n",
             "To: /content/punto1.png\n",
-            "100%|██████████| 9.85k/9.85k [00:00<00:00, 16.9MB/s]\n"
+            "100%|██████████| 9.85k/9.85k [00:00<00:00, 23.4MB/s]\n"
           ]
         },
         {
@@ -91,7 +91,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 33
         }
       ]
     },
@@ -99,31 +99,28 @@
       "cell_type": "code",
       "source": [
         "#instalación de librerías\n",
-        "!pip install streamlit -q\n",
-        "!pip install control --quiet\n",
-        "!pip install streamlit cloudflared --quiet\n",
-        "!pip install streamlit yt_dlp librosa soundfile matplotlib scipy numpy"
+        "!pip install streamlit numpy scipy matplotlib librosa soundfile yt_dlp"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bweOA8oDVhfZ",
-        "outputId": "6fa5ca69-a0bf-49ee-cf61-e39b2eb24643"
+        "outputId": "f7689e21-f679-472d-9178-36eedcf50e08"
       },
-      "execution_count": 24,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: streamlit in /usr/local/lib/python3.11/dist-packages (1.46.1)\n",
-            "Requirement already satisfied: yt_dlp in /usr/local/lib/python3.11/dist-packages (2025.6.30)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (1.15.3)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (3.10.0)\n",
             "Requirement already satisfied: librosa in /usr/local/lib/python3.11/dist-packages (0.11.0)\n",
             "Requirement already satisfied: soundfile in /usr/local/lib/python3.11/dist-packages (0.13.1)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (3.10.0)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (1.15.3)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
+            "Requirement already satisfied: yt_dlp in /usr/local/lib/python3.11/dist-packages (2025.6.30)\n",
             "Requirement already satisfied: altair<6,>=4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.5.0)\n",
             "Requirement already satisfied: blinker<2,>=1.5.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (1.9.0)\n",
             "Requirement already satisfied: cachetools<7,>=4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.5.2)\n",
@@ -141,6 +138,12 @@
             "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in /usr/local/lib/python3.11/dist-packages (from streamlit) (3.1.44)\n",
             "Requirement already satisfied: pydeck<1,>=0.8.0b4 in /usr/local/lib/python3.11/dist-packages (from streamlit) (0.9.1)\n",
             "Requirement already satisfied: tornado!=6.5.0,<7,>=6.0.3 in /usr/local/lib/python3.11/dist-packages (from streamlit) (6.4.2)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.3.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (4.58.4)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.4.8)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (2.9.0.post0)\n",
             "Requirement already satisfied: audioread>=2.1.9 in /usr/local/lib/python3.11/dist-packages (from librosa) (3.0.1)\n",
             "Requirement already satisfied: numba>=0.51.0 in /usr/local/lib/python3.11/dist-packages (from librosa) (0.60.0)\n",
             "Requirement already satisfied: scikit-learn>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from librosa) (1.6.1)\n",
@@ -151,12 +154,6 @@
             "Requirement already satisfied: lazy_loader>=0.1 in /usr/local/lib/python3.11/dist-packages (from librosa) (0.4)\n",
             "Requirement already satisfied: msgpack>=1.0 in /usr/local/lib/python3.11/dist-packages (from librosa) (1.1.1)\n",
             "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.11/dist-packages (from soundfile) (1.17.1)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.3.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (4.58.4)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.4.8)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (3.2.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (2.9.0.post0)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (3.1.6)\n",
             "Requirement already satisfied: jsonschema>=3.0 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (4.24.0)\n",
             "Requirement already satisfied: narwhals>=1.14.2 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (1.45.0)\n",
@@ -184,13 +181,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YrQ5_uoLVbHr",
-        "outputId": "e60bb931-8351-4d5e-f713-ef29f9695a04"
+        "outputId": "9cfd55f3-0917-4b0d-802e-9bc1da9fc2c6"
       },
       "outputs": [
         {
@@ -219,43 +216,28 @@
         "st.title(\" Segundo Parcial - Señales y Sistemas\")\n",
         "\n",
         "st.markdown(\"\"\"\n",
-        "Este proyecto corresponde al **segundo parcial** del curso de **Señales y Sistemas**, y se divide en **dos secciones principales**:\n",
+        "Este **Segundo Parcial de Señales y Sistemas** incluye dos simuladores interactivos:\n",
         "\n",
         "---\n",
         "\n",
-        "## Punto 1: Simulación de Sistemas de Segundo Orden\n",
+        "### Punto 1: Sistemas de Segundo Orden\n",
         "\n",
-        "En esta sección se implementa un **dashboard interactivo** para simular sistemas descritos por una **función de transferencia de segundo orden**. El usuario puede:\n",
+        "Permite ajustar parámetros del sistema (tipo de respuesta, \\( \\zeta \\), \\( \\omega_n \\)) y visualizar:\n",
         "\n",
-        "- Seleccionar el **tipo de respuesta** del sistema: subamortiguada, sobreamortiguada, críticamente amortiguada o inestable.\n",
-        "- Ajustar parámetros clave como el **factor de amortiguamiento (ζ)** y la **frecuencia natural (ωₙ)**.\n",
-        "- Visualizar:\n",
-        "  - Diagrama de **Bode** (lazo abierto)\n",
-        "  - **Polos y ceros** (lazo abierto y cerrado)\n",
-        "  - Respuestas al **escalón**, **impulso** y **rampa** (lazo cerrado)\n",
-        "- Calcular:\n",
-        "  - **Tiempo de levantamiento**\n",
-        "  - **Sobreimpulso máximo**\n",
-        "  - **Tiempo al pico**\n",
-        "  - **Tiempo de establecimiento**\n",
-        "- Ver equivalencias en sistemas **mecánicos** (m, c, k) y **eléctricos** (R, L, C)\n",
+        "- Respuestas temporales: escalón, impulso, rampa\n",
+        "- Diagrama de **Bode** y **polos/ceros**\n",
+        "- Indicadores clave: tiempo pico, sobreimpulso, etc.\n",
+        "- Equivalencias mecánicas y eléctricas\n",
         "\n",
         "---\n",
         "\n",
-        "## Punto 2: Modulación y Demodulación SSB-AM\n",
+        "### Punto 2: Modulación SSB-AM\n",
         "\n",
-        "Se construyó un segundo dashboard que permite **visualizar y comprender** el proceso completo de modulación y demodulación por **banda lateral única (SSB-AM)**. El usuario puede:\n",
+        "Simula la modulación y demodulación por banda lateral única (SSB-AM) usando:\n",
         "\n",
-        "- Utilizar como señal mensaje:\n",
-        "  - Un **pulso rectangular**\n",
-        "  - Un segmento de **5 segundos de una canción**\n",
-        "- Observar:\n",
-        "  - La señal **original**\n",
-        "  - La señal **modulada**\n",
-        "  - La señal **recuperada** tras filtrado\n",
-        "  - El **diagrama de Bode** del filtro IIR\n",
-        "  - El **plano de polos y ceros**\n",
-        "- Entender el funcionamiento paso a paso mediante gráficas e interpretación del sistema SSB.\n",
+        "- Una señal de pulso o un fragmento de audio\n",
+        "- Gráficas de la señal **original**, **modulada** y **recuperada**\n",
+        "- Análisis en frecuencia, **Bode** y **polos/ceros**\n",
         "\n",
         "\"\"\")\n",
         "\n",
@@ -266,9 +248,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cA_MY5ggWuY5",
-        "outputId": "8cfb9718-acc7-4ec3-91b9-c6c7e94ea59c"
+        "outputId": "8b0c5562-9eb0-490c-8c4e-f05a19879966"
       },
-      "execution_count": 26,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mg5Y1mCbXt4F",
-        "outputId": "8b251567-38a1-402d-b6f3-3f2e3cd072af"
+        "outputId": "23b67295-0401-4b43-c341-67da87dc411e"
       },
-      "execution_count": 27,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,9 +428,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2gPt-yUYq54",
-        "outputId": "9518dc09-dcb7-42aa-f9d7-aa85e077d610"
+        "outputId": "4e6a96a3-ed41-46ba-a49b-ebf5ca108848"
       },
-      "execution_count": 28,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,9 +788,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlKeOz5SiTML",
-        "outputId": "75b7a488-dd9e-4754-91d5-71436807985f"
+        "outputId": "253482cc-16a4-4083-d592-44dc5694d81a"
       },
-      "execution_count": 29,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +809,7 @@
       "metadata": {
         "id": "N2jEnhxriw8q"
       },
-      "execution_count": 30,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -869,35 +851,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7eHy3I9naAKL",
-        "outputId": "31ee0ebd-9a9e-4f11-82a8-69a3e239d37c"
+        "outputId": "6db17228-789a-4426-a2dd-abcffe295c90"
       },
-      "execution_count": 31,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-07-07 02:23:23--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "--2025-07-07 02:58:52--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64 [following]\n",
-            "--2025-07-07 02:23:23--  https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64\n",
+            "--2025-07-07 02:58:52--  https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64\n",
             "Reusing existing connection to github.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T022323Z&X-Amz-Expires=1800&X-Amz-Signature=819711f95bdf42dbed4cdd137982934481219a4a2c1125028cd7ecfa3ba6d053&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
-            "--2025-07-07 02:23:23--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T022323Z&X-Amz-Expires=1800&X-Amz-Signature=819711f95bdf42dbed4cdd137982934481219a4a2c1125028cd7ecfa3ba6d053&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T025849Z&X-Amz-Expires=1800&X-Amz-Signature=01dd42fa3ce3162bbc7daa04da109c132dddee555344c2c89a4f8e70f5fc0cdc&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
+            "--2025-07-07 02:58:52--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T025849Z&X-Amz-Expires=1800&X-Amz-Signature=01dd42fa3ce3162bbc7daa04da109c132dddee555344c2c89a4f8e70f5fc0cdc&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
+            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 41168761 (39M) [application/octet-stream]\n",
             "Saving to: ‘cloudflared-linux-amd64’\n",
             "\n",
-            "cloudflared-linux-a 100%[===================>]  39.26M   149MB/s    in 0.3s    \n",
+            "cloudflared-linux-a 100%[===================>]  39.26M   136MB/s    in 0.3s    \n",
             "\n",
-            "2025-07-07 02:23:23 (149 MB/s) - ‘cloudflared-linux-amd64’ saved [41168761/41168761]\n",
+            "2025-07-07 02:58:52 (136 MB/s) - ‘cloudflared-linux-amd64’ saved [41168761/41168761]\n",
             "\n",
-            "Tu aplicación está disponible en: https://frank-approach-rise-journalists.trycloudflare.com\n"
+            "Tu aplicación está disponible en: https://dirt-mile-danny-planet.trycloudflare.com\n"
           ]
         }
       ]
