Se creó con Colab

--- a/Parcial_2.ipynb
+++ b/Parcial_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5VamEv56lwsjkWuuJtUUm",
+      "authorship_tag": "ABX9TyMjHaFfq9EtLQANH+Xn7CiX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,9 +82,9 @@
           "height": 174
         },
         "id": "izMGwd6hd-IL",
-        "outputId": "3c247a79-e8a7-4dcd-ead9-765b7454d629"
+        "outputId": "7904ee52-38c5-4875-faf6-98e7405fa308"
       },
-      "execution_count": 62,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,11 +93,11 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=18hLnsW5nwOM4PDpHfGNefB5-y7oLdi_s\n",
             "To: /content/punto0.png\n",
-            "100%|██████████| 21.9k/21.9k [00:00<00:00, 23.7MB/s]\n",
+            "100%|██████████| 21.9k/21.9k [00:00<00:00, 44.0MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1yFvF9wO81piylZmNcztEYAWO7yilrl9n\n",
             "To: /content/punto1.png\n",
-            "100%|██████████| 9.85k/9.85k [00:00<00:00, 19.0MB/s]\n"
+            "100%|██████████| 9.85k/9.85k [00:00<00:00, 18.1MB/s]\n"
           ]
         },
         {
@@ -111,7 +111,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 1
         }
       ]
     },
@@ -142,22 +142,24 @@
         "!pip install scipy            # Librería para procesamiento de señales y diseño de filtros\n",
         "!pip install matplotlib       # Librería para generar gráficas\n",
         "!pip install librosa          # Librería especializada en análisis de audio\n",
-        "!pip install soundfile        # Librería para lectura/escritura de archivos de audio .wav\n"
+        "!pip install soundfile        # Librería para lectura/escritura de archivos de audio .wav\n",
+        "!pip install control          # Librería para análisis de sistemas de control"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bweOA8oDVhfZ",
-        "outputId": "bedde727-0b48-4211-fe99-7c1cde55dc38"
+        "outputId": "05d81dcb-91bc-4bba-adc6-1b0cf81d4409"
       },
-      "execution_count": 63,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: streamlit in /usr/local/lib/python3.11/dist-packages (1.46.1)\n",
+            "Collecting streamlit\n",
+            "  Downloading streamlit-1.46.1-py3-none-any.whl.metadata (9.0 kB)\n",
             "Requirement already satisfied: altair<6,>=4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.5.0)\n",
             "Requirement already satisfied: blinker<2,>=1.5.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (1.9.0)\n",
             "Requirement already satisfied: cachetools<7,>=4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.5.2)\n",
@@ -172,9 +174,12 @@
             "Requirement already satisfied: tenacity<10,>=8.1.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (8.5.0)\n",
             "Requirement already satisfied: toml<2,>=0.10.1 in /usr/local/lib/python3.11/dist-packages (from streamlit) (0.10.2)\n",
             "Requirement already satisfied: typing-extensions<5,>=4.4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (4.14.0)\n",
-            "Requirement already satisfied: watchdog<7,>=2.1.5 in /usr/local/lib/python3.11/dist-packages (from streamlit) (6.0.0)\n",
-            "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in /usr/local/lib/python3.11/dist-packages (from streamlit) (3.1.44)\n",
-            "Requirement already satisfied: pydeck<1,>=0.8.0b4 in /usr/local/lib/python3.11/dist-packages (from streamlit) (0.9.1)\n",
+            "Collecting watchdog<7,>=2.1.5 (from streamlit)\n",
+            "  Downloading watchdog-6.0.0-py3-none-manylinux2014_x86_64.whl.metadata (44 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.3/44.3 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in /usr/local/lib/python3.11/dist-packages (from streamlit) (3.1.44)\n",
+            "Collecting pydeck<1,>=0.8.0b4 (from streamlit)\n",
+            "  Downloading pydeck-0.9.1-py2.py3-none-any.whl.metadata (4.1 kB)\n",
             "Requirement already satisfied: tornado!=6.5.0,<7,>=6.0.3 in /usr/local/lib/python3.11/dist-packages (from streamlit) (6.4.2)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (3.1.6)\n",
             "Requirement already satisfied: jsonschema>=3.0 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (4.24.0)\n",
@@ -194,6 +199,14 @@
             "Requirement already satisfied: referencing>=0.28.4 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.36.2)\n",
             "Requirement already satisfied: rpds-py>=0.7.1 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.26.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
+            "Downloading streamlit-1.46.1-py3-none-any.whl (10.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.1/10.1 MB\u001b[0m \u001b[31m77.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pydeck-0.9.1-py2.py3-none-any.whl (6.9 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m85.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading watchdog-6.0.0-py3-none-manylinux2014_x86_64.whl (79 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.1/79.1 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: watchdog, pydeck, streamlit\n",
+            "Successfully installed pydeck-0.9.1 streamlit-1.46.1 watchdog-6.0.0\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (1.15.3)\n",
             "Requirement already satisfied: numpy<2.5,>=1.23.5 in /usr/local/lib/python3.11/dist-packages (from scipy) (2.0.2)\n",
@@ -236,7 +249,25 @@
             "Requirement already satisfied: soundfile in /usr/local/lib/python3.11/dist-packages (0.13.1)\n",
             "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.11/dist-packages (from soundfile) (1.17.1)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from soundfile) (2.0.2)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.0->soundfile) (2.22)\n"
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.0->soundfile) (2.22)\n",
+            "Collecting control\n",
+            "  Downloading control-0.10.2-py3-none-any.whl.metadata (7.6 kB)\n",
+            "Requirement already satisfied: numpy>=1.23 in /usr/local/lib/python3.11/dist-packages (from control) (2.0.2)\n",
+            "Requirement already satisfied: scipy>=1.8 in /usr/local/lib/python3.11/dist-packages (from control) (1.15.3)\n",
+            "Requirement already satisfied: matplotlib>=3.6 in /usr/local/lib/python3.11/dist-packages (from control) (3.10.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (1.3.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (4.58.4)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (1.4.8)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (24.2)\n",
+            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (11.2.1)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib>=3.6->control) (2.9.0.post0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib>=3.6->control) (1.17.0)\n",
+            "Downloading control-0.10.2-py3-none-any.whl (578 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m578.3/578.3 kB\u001b[0m \u001b[31m12.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: control\n",
+            "Successfully installed control-0.10.2\n"
           ]
         }
       ]
@@ -253,23 +284,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 3,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YrQ5_uoLVbHr",
-        "outputId": "f3af61fc-92ac-46cd-d383-deef6d3b888f"
+        "id": "YrQ5_uoLVbHr"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘pages’: File exists\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!mkdir pages"
       ]
@@ -333,15 +352,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cA_MY5ggWuY5",
-        "outputId": "f50ff447-7017-4685-cefe-01033ce1c713"
+        "outputId": "06f7bb66-0700-4128-c1b9-5daab421cc93"
       },
-      "execution_count": 65,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting 0_Parcial_2.py\n"
+            "Writing 0_Parcial_2.py\n"
           ]
         }
       ]
@@ -520,15 +539,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mg5Y1mCbXt4F",
-        "outputId": "e34f76de-2d40-43fa-b7b6-eb3e2aafa1ff"
+        "outputId": "17ec090f-0f2f-4469-9293-446a2b184d9b"
       },
-      "execution_count": 66,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting pages/1_Punto_1.py\n"
+            "Writing pages/1_Punto_1.py\n"
           ]
         }
       ]
@@ -543,9 +562,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2gPt-yUYq54",
-        "outputId": "619c7fcb-76ed-47dd-89c6-2b3b902705d6"
+        "outputId": "29c4a0ca-5ad7-4564-cdbe-18c64cf0d078"
       },
-      "execution_count": 67,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,15 +941,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlKeOz5SiTML",
-        "outputId": "982dad66-a641-4807-fcbf-c8ddad16f0ed"
+        "outputId": "83213bfe-8b4f-405d-e0f9-eac5abb462cf"
       },
-      "execution_count": 68,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting pages/2_Punto_2.py\n"
+            "Writing pages/2_Punto_2.py\n"
           ]
         }
       ]
@@ -945,9 +964,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1d45cbf-9070-4d3f-e798-2bdf0ee90e78"
+        "outputId": "4dd5bd72-0758-490c-84f3-c31a2c14989d"
       },
-      "execution_count": 69,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1008,35 +1027,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7eHy3I9naAKL",
-        "outputId": "eb9110eb-fa48-4be9-b211-fba1cf1649a0"
+        "outputId": "2033f5bb-b541-4610-c947-2b87f9954261"
       },
-      "execution_count": 70,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-07-07 03:37:38--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2025-07-07 19:02:40--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64 [following]\n",
-            "--2025-07-07 03:37:38--  https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64\n",
+            "--2025-07-07 19:02:41--  https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64\n",
             "Reusing existing connection to github.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T033738Z&X-Amz-Expires=1800&X-Amz-Signature=e17b1ea753d51921c4acce20ec5495cec925b93d25f41047c18fdff700f04cd3&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
-            "--2025-07-07 03:37:38--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T033738Z&X-Amz-Expires=1800&X-Amz-Signature=e17b1ea753d51921c4acce20ec5495cec925b93d25f41047c18fdff700f04cd3&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T190206Z&X-Amz-Expires=1800&X-Amz-Signature=f57646311f129776cd1d3a50168c4438f4a1b33abb344a9bf105b550fa52c71d&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
+            "--2025-07-07 19:02:41--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T190206Z&X-Amz-Expires=1800&X-Amz-Signature=f57646311f129776cd1d3a50168c4438f4a1b33abb344a9bf105b550fa52c71d&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
+            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 41168761 (39M) [application/octet-stream]\n",
             "Saving to: ‘cloudflared-linux-amd64’\n",
             "\n",
-            "cloudflared-linux-a 100%[===================>]  39.26M   155MB/s    in 0.3s    \n",
+            "cloudflared-linux-a 100%[===================>]  39.26M   233MB/s    in 0.2s    \n",
             "\n",
-            "2025-07-07 03:37:39 (155 MB/s) - ‘cloudflared-linux-amd64’ saved [41168761/41168761]\n",
+            "2025-07-07 19:02:41 (233 MB/s) - ‘cloudflared-linux-amd64’ saved [41168761/41168761]\n",
             "\n",
-            "Tu aplicación está disponible en: https://sh-switches-latin-hack.trycloudflare.com\n"
+            "Tu aplicación está disponible en: https://heights-career-rna-signed.trycloudflare.com\n"
           ]
         }
       ]
